womtool/src/test/resources/validate/wdl_draft3/invalid/missing_equal/missing_equal.wdl
version 1.0

workflow Zardoz {
    Boolean myBool false
}
